# stockage-vectoriel

./: .gitignore  .pre-commit-config.yaml  hello_milvus.py  pyproject.toml
vector/: allocate.py  connection.py  generate.py
